# py-pilecore

./: .buildinfo  .coveragerc  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  biome.json  cemsdev.toml  cliff.toml  genindex.html  get-super-linter-dependencies.sh  index.html  objects.inv  pyproject.toml  requirements.txt  run_super_linter.sh  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/tree/: getting_started.doctree  reference.doctree
.github/: super-linter.env
.github/workflows/: deploy_docs.yaml  release_pypi.yaml  test.yaml
_modules/: functools.html  index.html
_modules/pypilecore/: api.html
_modules/pypilecore/common/piles/: main.html  type.html
_modules/pypilecore/common/piles/geometry/: main.html  materials.html
_modules/pypilecore/common/piles/geometry/components/: common.html
_modules/pypilecore/input/: grouper_properties.html  multi_cpt.html
_modules/pypilecore/results/: cases_multi_cpt_results.html  grouper_result.html  multi_cpt_results.html  pile_properties.html  post_processing.html  single_cpt_results.html  soil_properties.html
_modules/pypilecore/viewers/: viewer_cpt_group_results.html  viewer_cpt_results.html  viewer_cpt_results_plan_view.html
_sources/: index.rst.txt
_sources/tree/: reference.rst.txt
_static/: documentation_options.js
docs/: conf.py
docs/adr/: 0001-grouper-custom-bearing-results.md
docs/agents/: domain.md
docs/tree/: getting_started.rst  reference.rst
notebooks/: 87362_DKM148.gef  87362_DKM148_classification.json  PileCore_multi_cpt.ipynb  PileCore_multi_cpt_grouper.ipynb  PileCore_multi_cpt_tension.ipynb  issue_guido_abt.py  requirements.txt  widgets.ipynb
src/py_pilecore/: exceptions.py  utils.py
src/py_pilecore/results/: load_settlement.py  single_cpt_results.py
src/py_pilecore/widgets/: __init__.py  base.py  collection.py  components.py  pile.py  project.py  style.py  utils.py
src/py_pilecore/widgets/aggregate/: __init__.py  calculation_params.py  cpt.py  pile.py
src/pypilecore/: __init__.py  _version.py  api.py  plot_utils.py  utils.py
src/pypilecore/common/: friction.py  norms.py
src/pypilecore/common/piles/: __init__.py  grid.py  main.py  type.py
src/pypilecore/common/piles/geometry/: __init__.py  main.py  materials.py
src/pypilecore/common/piles/geometry/components/: __init__.py  common.py  plot.py  rectangle.py  round.py
src/pypilecore/input/: __init__.py  grouper_properties.py  multi_cpt.py  pile_properties.py  soil_properties.py  tension.py
src/pypilecore/results/: __init__.py  cases_grouper_results.py  cases_multi_cpt_results.py  custom_bearing_results.py  data_tables.py  grouper_result.py  lib.py  load_settlement.py  multi_cpt_results.py  pile_properties.py  plots.py  post_processing.py  result_definitions.py  result_types.py  single_cpt_results.py  soil_properties.py  tension_multi_cpt_results.py  tension_single_cpt_results.py  typing.py
src/pypilecore/results/compression/: multi_cpt_results.py  single_cpt_results.py
src/pypilecore/results/tension/: multi_cpt_results.py  single_cpt_results.py
src/pypilecore/viewers/: __init__.py  _typing.py  viewer_cpt_group_results.py  viewer_cpt_results.py  viewer_cpt_results_overview.py  viewer_cpt_results_plan_view.py  viewer_cpt_results_versus_ptls.py  viewer_grouper_results_per_cpt_table.py  viewer_grouper_results_plan_view.py  viewer_results_per_cpt_table.py
src/pypilecore/viewers/interactive_figures/: __init__.py  figure_cpt_group_results_versus_ptls.py  figure_cpt_results_plan_view.py  figure_cpt_results_versus_ptls.py  utils.py
tests/: conftest.py  test_grouper.py  test_input.py  test_soil.py
tests/common/norms/: test_norms.py
tests/common/piles/: conftest.py  test_pile_geometry.py  test_pile_geometry_components_common.py
tests/data/: cpt.gef  cpt_no_coordinates.GEF
tests/input/: test_grouper_properties.py  test_multi_cpt.py  test_soil_properties.py
tests/openapi/: README.txt  openapi.yaml
tests/response/: classify_response.json  group_cpts_response.json  group_cpts_response_3.json  group_multi_response.json  group_passover_dump.json  multi_cpt_bearing_response.json  multi_cpt_bearing_response_2.json  multi_cpt_bearing_response_less_cpts.json  multi_cpt_bearing_response_less_pile_tip_levels.json  multi_cpt_tension_payload.json  multi_cpt_tension_response.json  results_passover_dump.json  results_passover_dump_3.json
tests/results/: test_cases_multi_cpt_results.py  test_custom_bearing_results.py  test_grouper.py  test_grouper_custom_pipeline.py  test_grouper_custom_tier2.py  test_multi_cpt_results.py  test_multi_cpt_tension_results.py  test_pile_properties.py  test_soil_properties.py
tests/viewers/: test_viewer_cpt_group_results.py  test_viewer_cpt_results.py  test_viewer_cpt_results_plan_view.py
tests/viewers/figures/: test_figure_cpt_group_results_plan_view.py  test_figure_cpt_group_results_versus_ptls.py  test_figure_cpt_results_plan_view.py  test_figure_cpt_results_versus_ptls.py
tree/: getting_started.html  reference.html
